--- a/app/src/main/res/layout/activity_agendar_consulta.xml
+++ b/app/src/main/res/layout/activity_agendar_consulta.xml
@@ -246,7 +246,7 @@
         <Spinner
           android:id="@+id/spinnerHorario"
           android:layout_width="120dp"
-          android:layout_height="wrap_content"
+          android:layout_height="48dp"
           android:layout_marginTop="16dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
