--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,32 +6,38 @@
   android:layout_height="match_parent"
   tools:context=".ProfileFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+
+  <ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
+
     <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">
 
-        <View
-          android:id="@+id/viewTopo"
-          android:layout_width="0dp"
-          android:layout_height="140dp"
-          android:background="@color/vermelho"
-          app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toTopOf="parent" />
+      <View
+        android:id="@+id/viewTopo"
+        android:layout_width="0dp"
+        android:layout_height="140dp"
+        android:background="@color/vermelho"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-          android:id="@+id/textViewTopo"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="Perfil"
-          android:textColor="#FFFFFF"
-          android:textSize="34sp"
-          app:layout_constraintBottom_toBottomOf="@+id/viewTopo"
-          app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toTopOf="parent" />
+      <TextView
+        android:id="@+id/textViewTopo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Perfil"
+        android:textColor="#FFFFFF"
+        android:textSize="34sp"
+        app:layout_constraintBottom_toBottomOf="@+id/viewTopo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+  </ScrollView>
 
 </FrameLayout>
