--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -17,4 +17,15 @@
       app:layout_constraintTop_toTopOf="parent"
       app:srcCompat="@drawable/cuidando_de_voce_2"
       android:contentDescription="Splash screen" />
+
+    <TextView
+      android:id="@+id/textViewVersionSplashScreen"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginEnd="8dp"
+      android:layout_marginBottom="8dp"
+      android:text="Version"
+      android:textColor="@color/vermelho"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
