--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -7,7 +7,7 @@
   tools:context=".SplashScreen">
 
     <ImageView
-      android:id="@+id/imageView4"
+      android:id="@+id/imageViewSplashScreen"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginBottom="32dp"
