--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -17,7 +17,7 @@
       android:layout_height="match_parent">
 
       <View
-        android:id="@+id/viewTopo"
+        android:id="@+id/viewTopoProfile"
         android:layout_width="0dp"
         android:layout_height="140dp"
         android:background="@color/vermelho"
@@ -26,13 +26,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
       <TextView
-        android:id="@+id/textViewTopo"
+        android:id="@+id/textViewTopoProfile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Perfil"
         android:textColor="#FFFFFF"
         android:textSize="34sp"
-        app:layout_constraintBottom_toBottomOf="@+id/viewTopo"
+        app:layout_constraintBottom_toBottomOf="@+id/viewTopoProfile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
