--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,15 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
   <item
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:title="Menu"
     android:id="@+id/menu"
+    android:title="Menu"
     android:icon="@drawable/ic_baseline_home_24"/>
   <item
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:title="Perfil"
+    android:id="@+id/ai"
+    android:title=""
+    android:enabled="false"/>
+  <item
     android:id="@+id/perfil"
+    android:title="Perfil"
     android:icon="@drawable/ic_baseline_person_24"/>
 </menu>
