--- a/app/src/main/res/layout/activity_cadastro_paciente.xml
+++ b/app/src/main/res/layout/activity_cadastro_paciente.xml
@@ -11,88 +11,37 @@
     android:layout_height="wrap_content"
     tools:context=".CadastroPaciente">
 
+    <ImageView
+      android:id="@+id/imageViewLogo"
+      android:layout_width="150dp"
+      android:layout_height="150dp"
+      android:layout_marginTop="8dp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:srcCompat="@drawable/logo_2" />
+
     <EditText
-      android:id="@+id/editTextUsuarioSenha"
+      android:id="@+id/editTextFullName"
       android:layout_width="0dp"
       android:layout_height="50dp"
       android:layout_marginStart="32dp"
-      android:layout_marginTop="16dp"
+      android:layout_marginTop="8dp"
       android:layout_marginEnd="32dp"
       android:background="@drawable/edittext_background"
-      android:drawableStart="@drawable/cadeado_senha"
+      android:drawableStart="@drawable/pessoa_usuario"
       android:drawablePadding="20dp"
       android:ems="10"
-      android:hint="Senha"
-      android:inputType="textPassword"
+      android:hint="Nome completo"
+      android:inputType="textPersonName"
       android:paddingStart="10dp"
       android:textStyle="bold"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/editTextUsuarioEmail" />
+      app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />
 
     <EditText
-      android:id="@+id/editTextUsuarioEmail"
-      android:layout_width="0dp"
-      android:layout_height="50dp"
-      android:layout_marginStart="32dp"
-      android:layout_marginTop="16dp"
-      android:layout_marginEnd="32dp"
-      android:background="@drawable/edittext_background"
-      android:drawableStart="@drawable/email"
-      android:drawablePadding="20dp"
-      android:ems="10"
-      android:hint="E-mail"
-      android:inputType="textEmailAddress"
-      android:paddingStart="10dp"
-      android:textStyle="bold"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.0"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/editTextUsuarioNumeroContato" />
-
-    <EditText
-      android:id="@+id/editTextUsuarioNumeroContato"
-      android:layout_width="0dp"
-      android:layout_height="50dp"
-      android:layout_marginStart="32dp"
-      android:layout_marginTop="16dp"
-      android:layout_marginEnd="32dp"
-      android:background="@drawable/edittext_background"
-      android:drawableStart="@drawable/telefone"
-      android:drawablePadding="20dp"
-      android:ems="10"
-      android:hint="Número de contato"
-      android:inputType="phone"
-      android:paddingStart="10dp"
-      android:textStyle="bold"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.0"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/editTextUsuarioCPF" />
-
-    <EditText
-      android:id="@+id/editTextUsuarioCPF"
-      android:layout_width="0dp"
-      android:layout_height="50dp"
-      android:layout_marginStart="32dp"
-      android:layout_marginTop="16dp"
-      android:layout_marginEnd="32dp"
-      android:background="@drawable/edittext_background"
-      android:drawableStart="@drawable/carteira_cpf"
-      android:drawablePadding="20dp"
-      android:ems="10"
-      android:hint="CPF"
-      android:inputType="number"
-      android:paddingStart="10dp"
-      android:textStyle="bold"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.0"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/editTextUsuarioDataNascimento" />
-
-    <EditText
-      android:id="@+id/editTextUsuarioDataNascimento"
+      android:id="@+id/editTextBirthDate"
       android:layout_width="0dp"
       android:layout_height="50dp"
       android:layout_marginStart="32dp"
@@ -109,39 +58,90 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/editTextUsuarioNomeCompleto" />
+      app:layout_constraintTop_toBottomOf="@+id/editTextFullName" />
 
     <EditText
-      android:id="@+id/editTextUsuarioNomeCompleto"
+      android:id="@+id/editTextCPF"
       android:layout_width="0dp"
       android:layout_height="50dp"
       android:layout_marginStart="32dp"
-      android:layout_marginTop="8dp"
+      android:layout_marginTop="16dp"
       android:layout_marginEnd="32dp"
       android:background="@drawable/edittext_background"
-      android:drawableStart="@drawable/pessoa_usuario"
+      android:drawableStart="@drawable/carteira_cpf"
       android:drawablePadding="20dp"
       android:ems="10"
-      android:hint="Nome completo"
-      android:inputType="textPersonName"
+      android:hint="CPF"
+      android:inputType="number"
       android:paddingStart="10dp"
       android:textStyle="bold"
       app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/imageViewLogoCadastroPaciente" />
+      app:layout_constraintTop_toBottomOf="@+id/editTextBirthDate" />
 
-    <ImageView
-      android:id="@+id/imageViewLogoCadastroPaciente"
-      android:layout_width="150dp"
-      android:layout_height="150dp"
-      android:layout_marginTop="8dp"
+    <EditText
+      android:id="@+id/editTextContactNumber"
+      android:layout_width="0dp"
+      android:layout_height="50dp"
+      android:layout_marginStart="32dp"
+      android:layout_marginTop="16dp"
+      android:layout_marginEnd="32dp"
+      android:background="@drawable/edittext_background"
+      android:drawableStart="@drawable/telefone"
+      android:drawablePadding="20dp"
+      android:ems="10"
+      android:hint="Número de contato"
+      android:inputType="phone"
+      android:paddingStart="10dp"
+      android:textStyle="bold"
       app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      app:srcCompat="@drawable/logo_2" />
+      app:layout_constraintTop_toBottomOf="@+id/editTextCPF" />
+
+    <EditText
+      android:id="@+id/editTextEmail"
+      android:layout_width="0dp"
+      android:layout_height="50dp"
+      android:layout_marginStart="32dp"
+      android:layout_marginTop="16dp"
+      android:layout_marginEnd="32dp"
+      android:background="@drawable/edittext_background"
+      android:drawableStart="@drawable/email"
+      android:drawablePadding="20dp"
+      android:ems="10"
+      android:hint="E-mail"
+      android:inputType="textEmailAddress"
+      android:paddingStart="10dp"
+      android:textStyle="bold"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.0"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/editTextContactNumber" />
+
+    <EditText
+      android:id="@+id/editTextSenha"
+      android:layout_width="0dp"
+      android:layout_height="50dp"
+      android:layout_marginStart="32dp"
+      android:layout_marginTop="16dp"
+      android:layout_marginEnd="32dp"
+      android:background="@drawable/edittext_background"
+      android:drawableStart="@drawable/cadeado_senha"
+      android:drawablePadding="20dp"
+      android:ems="10"
+      android:hint="Senha"
+      android:inputType="textPassword"
+      android:paddingStart="10dp"
+      android:textStyle="bold"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.0"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />
 
     <Button
-      android:id="@+id/botaoFinalizarCadastro"
+      android:id="@+id/buttonFinishRegistration"
       android:layout_width="0dp"
       android:layout_height="60dp"
       android:layout_marginStart="32dp"
@@ -155,7 +155,7 @@
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/editTextUsuarioSenha"
+      app:layout_constraintTop_toBottomOf="@+id/editTextSenha"
       app:layout_constraintVertical_bias="1.0" />
 
   </androidx.constraintlayout.widget.ConstraintLayout>
