--- a/app/src/main/res/layout/activity_suporte.xml
+++ b/app/src/main/res/layout/activity_suporte.xml
@@ -80,8 +80,10 @@
       android:layout_width="150dp"
       android:layout_height="50dp"
       android:layout_marginTop="32dp"
+      android:layout_marginBottom="32dp"
       android:text="Enviar"
       app:cornerRadius="50dp"
+      app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/editTextCampoSuporte" />
