--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -102,14 +102,14 @@
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/buttonEnter" />
 
-    <com.google.android.gms.common.SignInButton
+    <com.shobhitpuri.custombuttons.GoogleSignInButton
       android:id="@+id/sign_in_button"
       android:layout_width="200dp"
       android:layout_height="wrap_content"
       android:layout_centerInParent="true"
-      android:layout_marginStart="20dp"
       android:layout_marginTop="16dp"
-      android:layout_marginEnd="20dp"
+      android:text="Login com Google"
+      android:textStyle="bold"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/textViewForgotPassword" />
