--- a/app/src/main/res/layout/activity_agendar_consulta.xml
+++ b/app/src/main/res/layout/activity_agendar_consulta.xml
@@ -69,7 +69,7 @@
           android:layout_width="0dp"
           android:layout_height="140dp"
           android:layout_marginBottom="572dp"
-          android:background="@color/vermelho"
+          android:background="@color/red"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
@@ -147,6 +147,7 @@
           android:layout_marginTop="32dp"
           android:layout_marginBottom="32dp"
           android:text="Confirmar"
+          android:textSize="16sp"
           app:cornerRadius="50dp"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
