--- a/app/src/main/res/layout/activity_suporte.xml
+++ b/app/src/main/res/layout/activity_suporte.xml
@@ -15,7 +15,7 @@
       android:id="@+id/viewTopoSuporte"
       android:layout_width="0dp"
       android:layout_height="140dp"
-      android:background="@color/vermelho"
+      android:background="@color/red"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
@@ -82,6 +82,7 @@
       android:layout_marginTop="32dp"
       android:layout_marginBottom="32dp"
       android:text="Enviar"
+      android:textSize="16sp"
       app:cornerRadius="50dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
