--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,7 +20,7 @@
         android:id="@+id/viewTopoHome"
         android:layout_width="0dp"
         android:layout_height="140dp"
-        android:background="@color/vermelho"
+        android:background="@color/red"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -53,7 +53,7 @@
         android:layout_height="120dp"
         android:layout_marginTop="32dp"
         android:background="@drawable/edittext_background"
-        android:backgroundTint="@color/rosa_bege"
+        android:backgroundTint="@color/pink_beige"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/viewTopoHome" />
@@ -77,7 +77,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="230dp"
         android:background="@drawable/edittext_background"
-        android:backgroundTint="@color/rosa_bege"
+        android:backgroundTint="@color/pink_beige"
         android:foreground="?attr/selectableItemBackgroundBorderless"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -113,7 +113,7 @@
         android:layout_height="100dp"
         android:layout_marginTop="32dp"
         android:background="@drawable/edittext_background"
-        android:backgroundTint="@color/rosa_bege"
+        android:backgroundTint="@color/pink_beige"
         android:foreground="?attr/selectableItemBackgroundBorderless"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -149,7 +149,7 @@
         android:layout_marginStart="230dp"
         android:layout_marginTop="32dp"
         android:background="@drawable/edittext_background"
-        android:backgroundTint="@color/rosa_bege"
+        android:backgroundTint="@color/pink_beige"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/viewDicasTopo" />
@@ -184,7 +184,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="230dp"
         android:background="@drawable/edittext_background"
-        android:backgroundTint="@color/rosa_bege"
+        android:backgroundTint="@color/pink_beige"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/viewAgendarConsultas" />
@@ -218,7 +218,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginBottom="100dp"
         android:background="@drawable/edittext_background"
-        android:backgroundTint="@color/rosa_bege"
+        android:backgroundTint="@color/pink_beige"
         android:foreground="?attr/selectableItemBackgroundBorderless"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -255,7 +255,7 @@
         android:layout_marginStart="230dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/edittext_background"
-        android:backgroundTint="@color/rosa_bege"
+        android:backgroundTint="@color/pink_beige"
         android:foreground="?attr/selectableItemBackgroundBorderless"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
