--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -20,7 +20,7 @@
         android:id="@+id/viewTopoProfile"
         android:layout_width="0dp"
         android:layout_height="140dp"
-        android:background="@color/vermelho"
+        android:background="@color/red"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -44,9 +44,10 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="96dp"
-        android:backgroundTint="@color/vermelho"
+        android:backgroundTint="@color/red"
         android:text="Sair da conta"
         android:textAlignment="center"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:cornerRadius="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
