--- a/app/src/main/res/drawable/toast_border_error.xml
+++ b/app/src/main/res/drawable/toast_border_error.xml
@@ -4,7 +4,7 @@
         <shape android:shape="rectangle">
             <solid android:color="#FFFFFF" />
             <corners android:radius="50dp" />
-            <stroke android:width="2dp" android:color="@color/vermelho" />
+            <stroke android:width="2dp" android:color="@color/red" />
         </shape>
     </item>
 </selector>
