--- a/app/src/main/res/layout/activity_cadastro_medico.xml
+++ b/app/src/main/res/layout/activity_cadastro_medico.xml
@@ -208,8 +208,9 @@
       android:layout_marginTop="16dp"
       android:layout_marginEnd="32dp"
       android:layout_marginBottom="32dp"
-      android:backgroundTint="@color/vermelho"
+      android:backgroundTint="@color/red"
       android:text="Finalizar Cadastro"
+      android:textSize="16sp"
       android:textStyle="bold"
       app:cornerRadius="50dp"
       app:layout_constraintBottom_toBottomOf="parent"
