--- a/app/src/main/res/layout/activity_familia.xml
+++ b/app/src/main/res/layout/activity_familia.xml
@@ -15,7 +15,7 @@
       android:id="@+id/viewTopoNotificacoes"
       android:layout_width="0dp"
       android:layout_height="140dp"
-      android:background="@color/vermelho"
+      android:background="@color/red"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
