--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -40,7 +40,7 @@
     android:src="@drawable/ic_baseline_face_retouching_natural_24"
     app:layout_anchor="@id/bottomAppBar"
     app:maxImageSize="30dp"
-    app:tint="@color/vermelho"
+    app:tint="@color/red"
     android:contentDescription="IA"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
