--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,16 +28,43 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="8dp"
-      android:text="Bem-vindo!"
+      android:text="@string/welcome"
       android:textAlignment="center"
-      android:textColor="@color/vermelho"
+      android:textColor="@color/red"
       android:textSize="34sp"
       android:textStyle="bold"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/imageViewLogoLogin" />
 
+    <com.google.android.material.textfield.TextInputLayout
+      android:id="@+id/layout_email"
+      android:layout_width="0dp"
+      android:layout_height="50dp"
+      android:layout_marginStart="32dp"
+      android:layout_marginTop="24dp"
+      android:layout_marginEnd="32dp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/textViewWelcome">
+
+      <EditText
+        android:id="@+id/email_editText"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/edittext_background2"
+        android:drawableStart="@drawable/email"
+        android:drawablePadding="20dp"
+        android:ems="10"
+        android:hint="@string/email"
+        android:inputType="textEmailAddress"
+        android:paddingStart="10dp"
+        android:textStyle="bold"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
     <EditText
+      android:visibility="invisible"
       android:id="@+id/editTextUserEmail"
       android:layout_width="0dp"
       android:layout_height="50dp"
@@ -48,7 +75,7 @@
       android:drawableStart="@drawable/email"
       android:drawablePadding="20dp"
       android:ems="10"
-      android:hint="E-mail"
+      android:hint="@string/email"
       android:inputType="textEmailAddress"
       android:paddingStart="10dp"
       android:textStyle="bold"
@@ -56,7 +83,36 @@
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/textViewWelcome" />
 
+    <com.google.android.material.textfield.TextInputLayout
+      android:id="@+id/layout_password"
+      android:layout_width="0dp"
+      android:layout_height="50dp"
+      android:layout_marginStart="32dp"
+      android:layout_marginTop="16dp"
+      android:layout_marginEnd="32dp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/editTextUserEmail"
+      app:passwordToggleEnabled="true"
+      app:passwordToggleTint="@color/red">
+
+      <EditText
+        android:id="@+id/password_editText"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/edittext_background2"
+        android:drawableStart="@drawable/cadeado_senha"
+        android:drawablePadding="20dp"
+        android:ems="10"
+        android:hint="@string/password"
+        android:inputType="textPassword"
+        android:paddingStart="10dp"
+        android:textStyle="bold"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
     <EditText
+      android:visibility="invisible"
       android:id="@+id/editTextUserPassword"
       android:layout_width="0dp"
       android:layout_height="50dp"
@@ -67,7 +123,7 @@
       android:drawableStart="@drawable/cadeado_senha"
       android:drawablePadding="20dp"
       android:ems="10"
-      android:hint="Senha"
+      android:hint="@string/password"
       android:inputType="textPassword"
       android:paddingStart="10dp"
       android:textStyle="bold"
@@ -83,9 +139,10 @@
       android:layout_marginStart="32dp"
       android:layout_marginTop="16dp"
       android:layout_marginEnd="32dp"
-      android:backgroundTint="@color/vermelho"
-      android:text="Entrar"
+      android:backgroundTint="@color/red"
+      android:text="@string/enter"
       android:textAlignment="center"
+      android:textSize="16sp"
       android:textStyle="bold"
       app:cornerRadius="50dp"
       app:layout_constraintEnd_toEndOf="parent"
@@ -93,6 +150,7 @@
       app:layout_constraintTop_toBottomOf="@+id/editTextUserPassword" />
 
     <TextView
+      android:textColor="@color/pink"
       android:id="@+id/textViewForgotPassword"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
@@ -108,7 +166,7 @@
       android:layout_height="wrap_content"
       android:layout_centerInParent="true"
       android:layout_marginTop="16dp"
-      android:text="Login com Google"
+      android:text="@string/google_login"
       android:textStyle="bold"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
@@ -118,22 +176,46 @@
       android:id="@+id/textViewRegisterPatient"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginTop="32dp"
-      android:text="@string/cadastrese_usuario"
-      app:layout_constraintEnd_toEndOf="parent"
+      android:layout_marginStart="8dp"
+      android:layout_marginTop="-9dp"
+      android:layout_marginBottom="32dp"
+      android:text="@string/signup"
+      android:textColor="@color/pink"
+      app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />
+      app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
       android:id="@+id/textViewRegisterDoc"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginTop="20dp"
+      android:layout_marginTop="-9dp"
+      android:layout_marginEnd="8dp"
       android:layout_marginBottom="32dp"
-      android:text="@string/cadastrese_medico"
+      android:text="@string/signup"
+      android:textColor="@color/pink"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <TextView
+      android:id="@+id/textView"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="8dp"
+      android:layout_marginTop="32dp"
+      android:text="@string/signup_patient"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/textViewRegisterPatient" />
+      app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />
+
+    <TextView
+      android:id="@+id/textView2"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="32dp"
+      android:layout_marginEnd="8dp"
+      android:text="@string/signup_doctor"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />
   </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
