--- a/app/src/main/res/layout/fragment_ai.xml
+++ b/app/src/main/res/layout/fragment_ai.xml
@@ -15,13 +15,13 @@
     <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:background="@color/rosa_bege">
+      android:background="@color/pink_beige">
 
       <View
         android:id="@+id/viewTopoAi"
         android:layout_width="0dp"
         android:layout_height="140dp"
-        android:background="@color/vermelho"
+        android:background="@color/red"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -75,6 +75,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="32dp"
         android:text="Enviar"
+        android:textSize="16sp"
         app:cornerRadius="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
