--- a/app/src/main/res/values-v27/themes.xml
+++ b/app/src/main/res/values-v27/themes.xml
@@ -3,17 +3,19 @@
 
   <style name="Theme.CuidandoDeVocê" parent="Theme.MaterialComponents.Light.DarkActionBar">
     <!-- Primary brand color. -->
-    <item name="colorPrimary">@color/vermelho</item>
-    <item name="colorPrimaryVariant">@color/vermelho</item>
+    <item name="colorPrimary">@color/red</item>
+    <item name="colorPrimaryVariant">@color/red</item>
     <item name="colorOnPrimary">@color/white</item>
     <!-- Secondary brand color. -->
-    <item name="colorSecondary">@color/vermelho</item>
-    <item name="colorSecondaryVariant">@color/vermelho</item>
+    <item name="colorSecondary">@color/red</item>
+    <item name="colorSecondaryVariant">@color/red</item>
     <item name="colorOnSecondary">@color/white</item>
     <!-- Status bar color. -->
     <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
     <!-- Customize your theme here. -->
     <item name="android:navigationBarColor">@android:color/white</item>
     <item name="android:windowLightNavigationBar">@android:color/white</item>
+    <item name="android:fontFamily">@font/nunito</item>
+    <item name="textAllCaps">false</item>
   </style>
 </resources>
